force-app/main/default/objects/Investment__c/Investment__c.object-meta.xml
<CustomObject>
    <description>Confirmed, funded investor position in an Offering. Parent (master) of Contributions and Distributions, and the source of portfolio cash-flow roll-ups.</description>
    <label>Investment</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Investments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>