force-app/main/default/objects/Investment__c/fields/Amount_Funded__c.field-meta.xml
<CustomField>
    <fullName>Amount_Funded__c</fullName>
    <description>Capital actually funded into this investment position. Sensitive financial value; access restricted via field-level security.</description>
    <inlineHelpText>Enter the funded capital amount in USD. Restricted field.</inlineHelpText>
    <label>Amount Funded</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>