force-app/main/default/objects/Investment__c/fields/Cash_on_Cash__c.field-meta.xml
<CustomField>
    <fullName>Cash_on_Cash__c</fullName>
    <label>Cash-on-Cash</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>