force-app/main/default/objects/Investment__c/fields/Cost_Basis__c.field-meta.xml
<CustomField>
    <fullName>Cost_Basis__c</fullName>
    <description>Original cost basis of the investment position, used for gain/loss and tax reporting.</description>
    <inlineHelpText>Enter the cost basis in USD.</inlineHelpText>
    <label>Cost Basis</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>