force-app/main/default/objects/Investment__c/fields/DPEG_Stake__c.field-meta.xml
<CustomField>
    <fullName>DPEG_Stake__c</fullName>
    <label>DPEG Stake</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>