force-app/main/default/objects/Investment__c/fields/Equity_Pct__c.field-meta.xml
<CustomField>
    <fullName>Equity_Pct__c</fullName>
    <description>This position&apos;s share of the offering, calculated as Amount Funded relative to the offering&apos;s total Amount Raised.</description>
    <formula>IF(Offering__r.Amount_Raised__c &gt; 0, Amount_Funded__c / Offering__r.Amount_Raised__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Automatically calculated: Amount Funded divided by the offering&apos;s Amount Raised.</inlineHelpText>
    <label>Equity %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>