force-app/main/default/objects/Investment__c/fields/Funded_Date__c.field-meta.xml
<CustomField>
    <fullName>Funded_Date__c</fullName>
    <description>Date the investment position was funded.</description>
    <inlineHelpText>Enter the date capital was funded into this position.</inlineHelpText>
    <label>Funded Date</label>
    <type>Date</type>
</CustomField>