force-app/main/default/objects/Investment__c/fields/Investing_Entity__c.field-meta.xml
<CustomField>
    <fullName>Investing_Entity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The investing-entity account that holds this funded position.</description>
    <inlineHelpText>Select the investing-entity account that owns this investment.</inlineHelpText>
    <label>Investing Entity</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Investments</relationshipLabel>
    <relationshipName>Investments</relationshipName>
    <type>Lookup</type>
</CustomField>