force-app/main/default/objects/Investment__c/fields/Investment_Name__c.field-meta.xml
<CustomField>
    <fullName>Investment_Name__c</fullName>
    <label>Investment Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>