force-app/main/default/objects/Investment__c/fields/Investment_Period__c.field-meta.xml
<CustomField>
    <fullName>Investment_Period__c</fullName>
    <label>Investment Period</label>
    <length>255</length>
    <type>Text</type>
</CustomField>