force-app/main/default/objects/Investment__c/fields/IRR_to_Date__c.field-meta.xml
<CustomField>
    <fullName>IRR_to_Date__c</fullName>
    <label>IRR to Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>