force-app/main/default/objects/Investment__c/fields/LP_Capital__c.field-meta.xml
<CustomField>
    <fullName>LP_Capital__c</fullName>
    <label>LP Capital</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>