force-app/main/default/objects/Investment__c/fields/Net_Equity__c.field-meta.xml
<CustomField>
    <fullName>Net_Equity__c</fullName>
    <label>Net Equity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>