force-app/main/default/objects/Investment__c/fields/Offering__c.field-meta.xml
<CustomField>
    <fullName>Offering__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The offering this funded position belongs to.</description>
    <inlineHelpText>Select the offering this investment position is in.</inlineHelpText>
    <label>Offering</label>
    <referenceTo>Offering__c</referenceTo>
    <relationshipLabel>Investments</relationshipLabel>
    <relationshipName>Investments</relationshipName>
    <type>Lookup</type>
</CustomField>