force-app/main/default/objects/Investment__c/fields/Price_per_Share__c.field-meta.xml
<CustomField>
    <fullName>Price_per_Share__c</fullName>
    <label>Price per Share</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>