force-app/main/default/objects/Investment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Lifecycle status of the investment position.</description>
    <inlineHelpText>Active for live positions; Exited, Partially Transferred, or Transferred as the position changes hands.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Acquisition</fullName>
                <isActive>false</isActive>
                <label>Acquisition</label>
            </value>
            <value>
                <fullName>Funded</fullName>
                <isActive>false</isActive>
                <label>Funded</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>