force-app/main/default/objects/Investment__c/fields/Target_IRR__c.field-meta.xml
<CustomField>
    <fullName>Target_IRR__c</fullName>
    <label>Target IRR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>