force-app/main/default/objects/Investment__c/fields/Total_Contributed__c.field-meta.xml
<CustomField>
    <fullName>Total_Contributed__c</fullName>
    <label>Total Contributed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>