force-app/main/default/objects/Investment__c/fields/Units__c.field-meta.xml
<CustomField>
    <fullName>Units__c</fullName>
    <description>Number of ownership units held in this investment position.</description>
    <inlineHelpText>Enter the number of units held (supports fractional units).</inlineHelpText>
    <label>Units</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>