force-app/main/default/objects/Investment__c/validationRules/Amount_Funded_Not_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_Funded_Not_Negative</fullName>
    <active>true</active>
    <description>Prevents Amount Funded from being set to a negative value. Factory-safe: zero and blank are permitted; only negative values (less than 0) trigger the error.</description>
    <errorConditionFormula>Amount_Funded__c &lt; 0</errorConditionFormula>
    <errorMessage>Amount Funded cannot be negative.</errorMessage>
</ValidationRule>