force-app/main/default/objects/Investment__c/listViews/Active_Positions.listView-meta.xml
<ListView>
    <fullName>Active_Positions</fullName>
    <columns>NAME</columns>
    <columns>Investing_Entity__c</columns>
    <columns>Offering__c</columns>
    <columns>Amount_Funded__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active Positions</label>
</ListView>