force-app/main/default/objects/Investment__c/listViews/All_Investments.listView-meta.xml
<ListView>
    <fullName>All_Investments</fullName>
    <columns>NAME</columns>
    <columns>Investment_Name__c</columns>
    <columns>Total_Contributed__c</columns>
    <columns>Total_Distributed__c</columns>
    <columns>Price_per_Share__c</columns>
    <columns>Minimum_Investment__c</columns>
    <columns>Investment_Period__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Investments</label>
</ListView>